--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "format": "npx prettier --write .",
+    "check": "npx prettier --check ."
   },
   "private": true,
   "dependencies": {
