--- a/package.json
+++ b/package.json
@@ -51,15 +51,17 @@
     "@nrwl/web": "14.5.6",
     "@nrwl/workspace": "14.5.6",
     "@svgr/webpack": "^6.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "autoprefixer": "^10.4.8",
-    "babel-jest": "27.5.1",
+    "babel-jest": "^27.5.1",
     "cypress": "^10.2.0",
     "dotenv": "^16.0.1",
     "eslint": "~8.15.0",
@@ -70,14 +72,14 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "27.5.1",
+    "jest": "^27.5.1",
     "nx": "14.5.6",
     "postcss": "^8.4.16",
     "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "sass": "1.54.0",
     "tailwindcss": "^3.1.8",
-    "ts-jest": "27.1.4",
+    "ts-jest": "^27.1.5",
     "ts-node": "10.9.1",
     "typescript": "~4.7.2",
     "url-loader": "^4.1.1",
