--- a/libs/shared/ui/tsconfig.lib.json
+++ b/libs/shared/ui/tsconfig.lib.json
@@ -10,5 +10,11 @@
     "../../../node_modules/@nrwl/react/typings/image.d.ts"
   ],
   "include": ["**/*.ts"],
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": [
+    "jest.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
