--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -11,7 +11,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "paths": {
+      "@/*": ["apps/frontend/*"],
+      "@ecommerce/shared/graphql/*": ["libs/shared/graphql/src/*"],
+      "@ecommerce/shared/ui/*": ["libs/shared/ui/src/lib/*"],
+      "@ecommerce/shared/utils/*": ["libs/shared/utils/src/lib/*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
   "exclude": ["node_modules", "jest.config.ts"]
