--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "nx test",
     "generate": "graphql-codegen --config codegen.yml",
     "format": "npx prettier --write .",
-    "check": "npx prettier --check ."
+    "check": "npx prettier --check .",
+    "test-ui": "nx test shared-ui"
   },
   "private": true,
   "dependencies": {
