--- a/package.json
+++ b/package.json
@@ -43,14 +43,22 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.5.6",
     "@nrwl/cypress": "14.5.6",
     "@nrwl/eslint-plugin-nx": "14.5.8",
     "@nrwl/jest": "14.5.6",
     "@nrwl/linter": "14.5.6",
     "@nrwl/react": "14.5.6",
+    "@nrwl/storybook": "^14.5.8",
     "@nrwl/web": "14.5.6",
     "@nrwl/workspace": "14.5.8",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
+    "@storybook/react": "~6.5.9",
     "@svgr/webpack": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.3.0",
@@ -64,6 +72,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "autoprefixer": "^10.4.8",
     "babel-jest": "^27.5.1",
+    "babel-loader": "8.1.0",
     "cypress": "^10.2.0",
     "dotenv": "^16.0.1",
     "eslint": "~8.15.0",
