--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@ecommerce/shared/graphql/*": ["libs/shared/graphql/src/*"],
       "@ecommerce/shared/ui/*": ["libs/shared/ui/src/lib/*"],
-      "@ecommerce/shared/utils/*": ["libs/shared/utils/src/lib/*"]
+      "@ecommerce/shared/utils/*": ["libs/shared/utils/src/lib/*"],
+      "@ecommerce/shared/props/*": ["libs/shared/ui/src/props/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
